PR testsuite/79036 - gcc.dg/tree-ssa/builtin-sprintf.c fails starting with r244037 gcc/testsuite/ChangeLog: 	* gcc.dg/tree-ssa/builtin-sprintf.c: Handle extended formats 	with different precisions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244250 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-09  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/79036
+	* gcc.dg/tree-ssa/builtin-sprintf.c: Handle extended formats
+	with different precisions.
+
 2017-01-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* g++.dg/opt/call2.C: New test.
