--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-01  Jan Hubicka  <hubicka@ucw.cz>
+
+	PR middle-end/77484
+	* predict.def (PRED_CALL): Set to 67.
+
 2017-01-09  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* expr.c (store_field): In the bitfield case, if the value comes from
