* c-cppbuiltin.c (c_cpp_builtins): Define __cpp_variadic_using.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244283 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/c-family/ChangeLog
+++ b/gcc/c-family/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-10  Jason Merrill  <jason@redhat.com>
+
+	Implement P0195R2, C++17 variadic using.
+	* c-cppbuiltin.c (c_cpp_builtins): Define __cpp_variadic_using.
+
 2017-01-09  Jakub Jelinek  <jakub@redhat.com>
 
 	PR translation/79019
